# PyWebFW

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  architecture-design.html  class-design.html  diff.html  docker-compose.yml  guideline.html  history.html  pyproject.toml  requirements.txt  run.py  srs.html  user-manual.html
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  extensions.py  main.py
app/api/: admin_api.py  public_api.py
app/config/: settings.py
app/core/: container.py  csv_export.py  events.py  middleware.py  responses.py  routing.py  security.py  validation.py
app/domain/: models.py
app/repositories/: base.py  contact_repository.py  content_repository.py  db_connection_repository.py  log_repository.py  menu_repository.py  redirect_repository.py  setting_repository.py  traffic_repository.py  user_repository.py
deploy/: Caddyfile  deploy-admin.ps1  deploy-all.ps1  deploy-allinone.ps1  deploy-fe.ps1  deploy-scheduler.ps1  deploy.ps1
docs/: ARCHITECTURE.md  SRS.md  architecture-design.html  class-design.html  guideline.html  history.html  index.html  robots.txt  spec.md  srs.html  user-manual.html
pywebfw/: __init__.py  __main__.py  bootstrap.py  cli.py  plugins.py  scaffold.py
tests/: conftest.py  test_admin.py  test_admin_ui.py  test_batch1.py  test_batch2.py  test_batch3.py  test_content_admin.py  test_db_errors.py  test_framework_packaging.py  test_modules.py  test_p2_auth.py  test_p3_features.py  test_public.py  test_scheduler.py  test_security.py
tools/: export_community.py  setup_github_push.ps1
(+94 files in other folders)
