[project]
name = "pywebfw"
version = "0.1.0"
description = "Reusable OOP-first Python web framework: public site, admin, APIs, scheduler"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
postgres = ["psycopg[binary]>=3.1"]
redis = ["redis>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
