[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pywebfw"
version = "0.2.0"
description = "Reusable OOP-first Python web framework: public site + CMS, admin, APIs, scheduler, plugins"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "python-multipart>=0.0.9",
]

[project.scripts]
pywebfw = "pywebfw.cli:main"

[tool.setuptools.packages.find]
include = ["pywebfw*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
postgres = ["psycopg[binary]>=3.1"]
redis = ["redis>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
